# superquadric-ba

./: .gitignore  CLAUDE.md  CLUSTER.md  README.md  ase_mesh_download_urls.json  run.sh  run_all.sh  run_superdec_ase.sh  test_superdec.py
ba/: CMakeLists.txt  old_pycolmap_align.md
ba/eval/: CAMPAIGN_STATUS.md  COREFINE_PATCH.md  EXPERIMENTS.md  analyze_pose.py  analyze_recon.py  analyze_sparsity.py  eval_all.py  eval_full.py  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  exp6.py  exp7.py  exp_sparse.py  fig_before_after.py  fig_poses_v6_s6.py  fig_sq3d_clean.py  fig_superquadric_family.py  manhattan_check.py  offline_eval.py  run_analyze.sh  run_exp7.sh  run_sparse_sweep.sh  run_strategy.py  show_scene.py  strat_bo.py  strat_common.py  thread_scaling.py  validate_full.py
ba/eval/strategies/: anneal.py  baseline.py  em_reassoc.py  sq_best.py  sq_em_soft.py  sq_filter.py  sq_gated.py  sq_hinge_filtered.py  sq_hinge_weighted.py  sq_outlier_filter.py  sq_softweight.py  two_stage.py  two_stage_em.py
ba/python/: pyproject.toml
ba/python/ba/: __init__.py  superdec.py
ba/src/: baseline_ba.cpp  custom_ba.cpp  mast3r_ba.cpp  mast3r_sq_ba.cpp  vggt_sq_ba.cpp
compose/: .gitignore  test_superdec.py
compose/scripts/: covisibility_evaluation.py  export_meshes.py  prepare_benchmark_data.py  render_scene_vs_superdec.py  visualize_benchmark_sample.py  viz_vggt_aria.py
compose/slurm/: run_all.sh  run_benchmark.sh  run_benchmark_prep.sh  run_lambda_sweep.sh  run_sparse_benchmark.sh  run_sparse_mast3r_benchmark.sh  run_sparse_surface_benchmark.sh  run_sparse_surface_em_benchmark.sh  run_sparse_vggt_baseline.sh  run_vggt_nview.sh  run_vggt_viz.sh  run_views_sweep.sh  run_visualize_benchmark_sample.sh  run_viz_vggt_v6_s6.sh  test_surface_e2e.sh
compose/utils/: npy_to_csv.py  plot_results.py
docs/: project_structure.md
poster/: .gitignore  README.md  poster.tex
poster/reference/: TARGET.md
scripts/: compute_covisibility.py  convert_ase_to_wai.py  covisibility_pair_examples.py  extract_pointclouds.py
utils/: plot_results.py
