[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ba"
version = "0.1.0"
description = "Ceres-based bundle adjustment for mapanything"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["ba"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"ba" = ["*.so", "*.pyd"]
